# demo_rust_python_package

./: .gitignore  Cargo.toml  README.md  example.py  pyproject.toml
python/demo_rust_python_package/: __init__.py
src/: lib.rs
tests/: test_basic.py
