[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "demo_rust_python_package"
version = "0.1.0"
description = "A demo Python package with Rust backend"
authors = [
    {name = "Bilal Tonga", email = "bilaltonga@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
keywords = ["rust", "python", "demo"]

[project.urls]
Homepage = "https://github.com/bgunebakan/demo_rust_python_package"
Repository = "https://github.com/bgunebakan/demo_rust_python_package"

[tool.maturin]
python-source = "python"
